@@ -974,9 +974,9 @@ verilog/parser_sv.v:394: INSTANT  'if_bug777' 'ifport' ''
 verilog/parser_sv.v:394: ENDCELL  ''
 verilog/parser_sv.v:395: INSTANT  'if_bug777' 'ifportmp' ''
 verilog/parser_sv.v:395: ENDCELL  ''
-verilog/parser_sv.v:396: COMMENT  '// Currently unsupported, parens required so VP knows is instance'
-verilog/parser_sv.v:397: COMMENT  '//if_bug777 ifport;'
-verilog/parser_sv.v:398: COMMENT  '//if_bug777.mp ifportmp;'
+verilog/parser_sv.v:396: COMMENT  '//if_bug777.mp ifportmp ();  // Not legal'
+verilog/parser_sv.v:397: COMMENT  '// Currently unsupported, parens required so VP knows is instance'
+verilog/parser_sv.v:398: COMMENT  '//if_bug777 ifport;'
 verilog/parser_sv.v:399: ENDMODULE  'endmodule'
 verilog/parser_sv.v:400: MODULE  'module' 'bug778' undef '0'
 verilog/parser_sv.v:401: VAR  'var' 'bar' 'module' '' 'virtual if_bug777' '' ''
@@ -996,6 +996,11 @@ verilog/parser_sv.v:410: PORT  'bad' 'module' 'interface' 'test_if' '[2]' '1'
 verilog/parser_sv.v:410: INSTANT  'test_if' 'bad' '[2]'
 verilog/parser_sv.v:410: ENDCELL  ''
 verilog/parser_sv.v:411: ENDMODULE  'endmodule'
+verilog/parser_sv.v:413: MODULE  'module' 'bug868' undef '0'
+verilog/parser_sv.v:413: PORT  'ifmp' 'module' '' '' '' '1'
+verilog/parser_sv.v:414: INSTANT  'if_bug777' 'ifmp' ''
+verilog/parser_sv.v:414: ENDCELL  ''
+verilog/parser_sv.v:415: ENDMODULE  'endmodule'
 verilog/parser_sv09.v:001: COMMENT  '// 1800-2009 mantis1769'
 verilog/parser_sv09.v:002: MODULE  'module' 'mantis1769' undef '0'
 verilog/parser_sv09.v:002: VAR  'parameter' 'N' 'module' '' '' '' '1'
