@@ -392,10 +392,10 @@ endinterface
 module bug777 (clk, ifport);
    input clk;
    if_bug777 ifport ();
-   if_bug777.mp ifportmp ();
+   if_bug777.mp ifportmp;
+   //if_bug777.mp ifportmp ();  // Not legal
    // Currently unsupported, parens required so VP knows is instance
    //if_bug777 ifport;
-   //if_bug777.mp ifportmp;
 endmodule
 module bug778 ();
    virtual if_bug777.master bar;
@@ -408,4 +408,8 @@ endinterface
 
 module bug815 (
 	       test_if bad[2]);
+endmodule
+
+module bug868 (ifmp);
+   if_bug777.master ifmp;
 endmodule
